--- a/.github/workflows/check-tiktok-live.yml
+++ b/.github/workflows/check-tiktok-live.yml
@@ -1,4 +1,4 @@
-name: Check TikTok Live
+name: Check TikTok Live & Trigger Record
 
 on:
   schedule:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  check:
+  check-and-trigger:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,13 +21,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install TikTokLive requests
 
-      - name: Check if users are live
+      - name: Check live & trigger record workflow
         env:
-          TIKTOK_USERS: "jack.vn41 charlidamelio youruser2"  # Thay username thật, cách nhau space
+          TIKTOK_USERS: "jack.vn41 charlidamelio"  # Thêm username thật bạn muốn theo dõi
         run: |
           python - <<EOF
           import asyncio
           import os
+          import subprocess
           from TikTokLive import TikTokLiveClient
 
           USERS = os.getenv("TIKTOK_USERS", "").split()
@@ -38,6 +39,17 @@ jobs:
                   is_live_now = await client.is_live()
                   if is_live_now:
                       print(f"LIVE DETECTED: @{username}")
+                      # Trigger workflow ghi video
+                      dispatch_cmd = [
+                          'curl', '-L', '-X', 'POST',
+                          '-H', 'Accept: application/vnd.github+json',
+                          '-H', f'Authorization: Bearer {os.getenv("GITHUB_TOKEN")}',
+                          '-H', 'X-GitHub-Api-Version: 2022-11-28',
+                          f'https://api.github.com/repos/{os.getenv("GITHUB_REPOSITORY")}/dispatches',
+                          '-d', f'{{"event_type":"tiktok-live-start","client_payload":{{"user":"{username}"}}}}'
+                      ]
+                      subprocess.run(dispatch_cmd, check=True)
+                      print(f"Triggered record for @{username}")
                   else:
                       print(f"NOT live: @{username}")
               except Exception as e:
